--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,12 +17,16 @@
   "author": "Prithvish Sarkar",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.4",
     "express": "^5.1.0",
+    "helmet": "^8.1.0",
     "mysql2": "^3.14.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
     "@types/node": "^24.2.1",
     "drizzle-kit": "^0.31.4",
     "tsx": "^4.20.3",
